Removed a lot of logs, pushing more direct proto entities isntead of translating to local
